# serial-loader

./: .gitignore  AUTHORS  NEWS  README.md  configure.ac
.github/: CONTRIBUTING.md
build-aux/m4/: device.m4  flag.m4  host.m4  objcopy.m4
include/arch/arm/: delay.h  mmio.h  relocate.32.S  relocate.64.S  relocate.S
include/loader/: entry.h  itoa.h  memcpy.h  platform.h  printf.h  serial.h  strlen.h  strncmp.h  strrev.h  utoa.h  vendor.h
include/platform/rpi/: gpio.h  peripheral.h
include/platform/rpi/mailbox/: mailbox.h  property.h
m4/: flags.m4  host.m4
src/: Makefile.am
src/arch/arm/: Makefile.am  delay.c  fpu.S  mmio.c
src/arch/arm/v6/: Makefile.am
src/arch/arm/v7/: Makefile.am
src/loader/: Makefile.am  itoa.c  main.c  memcpy.c  printf.c  strlen.c  strncmp.c  strrev.c  utoa.c
src/platform/rpi/: Makefile.am  loader.v6.32.ld  loader.v7.32.ld  loader.v8.32.ld  loader.v8.64.ld  platform.c  serial.c  start.32.S  start.64.S
src/platform/rpi/mailbox/: mailbox.c  property.c
